TEST_PROGRAMS/INVALID/04/17.go
package main

func main() {
    //Illegal escape in interpreted string
    var x = "\'"
    x++ // "use" x
}
